force-app/main/default/objects/Student__c/fields/Student_Course__c.field-meta.xml
<CustomField>
    <fullName>Student_Course__c</fullName>
    <label>Student Course</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SalesForce</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>DevOps</fullName>
            </value>
            <value>
                <fullName>Python</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>