force-app/main/default/objects/Student__c/fields/Student_DOJ__c.field-meta.xml
<CustomField>
    <fullName>Student_DOJ__c</fullName>
    <label>Student DOJ</label>
    <type>Date</type>
</CustomField>