force-app/main/default/objects/Student__c/fields/Student_Father_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Father_Name__c</fullName>
    <label>Student Father Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>