force-app/main/default/objects/Student__c/validationRules/Student_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Student_Phone</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNUMBER( Student_Phone__c ))</errorConditionFormula>
    <errorMessage>Please enter a Number, characters are not accepted! Try again.</errorMessage>
</ValidationRule>